src/scss/_consent.scss
.consent-banner {
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: 1000;
  display: flex;
  background: var(--consent-banner-background);
  color: var(--consent-banner-color);
  padding: 1.25rem 1rem;
  width: 100%;
  max-width: 100vw;

  &__wrapper {
    align-items: center;
    justify-content: center;
    max-width: var(--site-width);
    margin: 0 auto;

    @include bp(tablet) {
      display: flex;
    }
  }

  &__notice {
    flex-grow: 1;
    flex-basis: 70%;
    font-size: var(--fs-xs);
  }

  &__actions {
    display: flex;
    justify-content: center;
    margin: 1.5rem auto 0;

    > .button:not(:last-child) {
      margin-right: .5rem;
    }

    @include bp(tablet) {
      flex-shrink: 0;
      margin: 0 0 0 1.5rem;
    }
  }

  p {
    margin: 0;
  }

  a {
    font-weight: 600;
  }
}

